# threat-hunting-query-system

./: .dockerignore  .env.example  .gitignore  APPROACH.md  DATASET_DOWNLOAD_INSTRUCTIONS.md  DATA_SOURCES.md  DEMO_RESULTS.md  DEMO_RESULTS_SUMMARY.md  Dockerfile  GIT_SETUP_INSTRUCTIONS.md  GPT4_LIVE_DEMO_RESULTS.md  INSTALL.md  INSTALL_KAGGLE_CLI.md  ITERATION2_IMPROVEMENTS.md  LICENSE  QUICKSTART.md  README.md  README_DATA_ISSUE.txt  REAL_DATA_TEST.md  SETUP.md  SOLUTION_SUMMARY.md  SUBMISSION_CHECKLIST.md  TEST_RESULTS.md  demo.ipynb  demo_run.py  docker-compose.yml  evaluator.py  main.py  pyproject.toml  query_generator.py  requirements.txt  sample_queries.json  synthetic_data_generator.py  test_system.py  utils.py
